--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "pkg-placeholder",
+  "name": "use-antdv-css",
   "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "packageManager": "pnpm@8.15.3",
-  "description": "_description_",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "description": "use antdv css token",
+  "author": "wermdany <https://github.com/wermdany>",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/pkg-placeholder#readme",
+  "homepage": "https://github.com/wermdany/use-antdv-css",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/pkg-placeholder.git"
+    "url": "git+https://github.com/wermdany/use-antdv-css.git"
   },
-  "bugs": "https://github.com/antfu/pkg-placeholder/issues",
+  "bugs": {
+    "url": "https://github.com/wermdany/use-antdv-css/issues"
+  },
   "keywords": [],
   "sideEffects": false,
   "exports": {
@@ -46,6 +47,11 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks"
+  },
+  "dependencies": {
+    "@emotion/css": "^11.11.2",
+    "ant-design-vue": "^4.1.2",
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
